--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "homeautomation-js-lib": "git://github.com/terafin/homeautomation-js-lib.git",
     "lodash": "^4.17.4",
+    "configstore": "^3.1.2",
     "reconnecting-websocket": "^4.0.0-rc5",
     "ws": "^5.2.0",
     "websocket": "^1.0.26",
