--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.4",
     "configstore": "^3.1.2",
     "reconnecting-websocket": "^4.0.0-rc5",
+    "moment-timezone": "^0.5.21",
     "ws": "^5.2.0",
     "websocket": "^1.0.26",
     "mqtt": "^2.15.1",
