--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "dependencies": {
     "homeautomation-js-lib": "git://github.com/terafin/homeautomation-js-lib.git",
-    "lodash": "^4.17.4",
-    "configstore": "^3.1.2",
-    "reconnecting-websocket": "^4.0.0-rc5",
-    "moment-timezone": "^0.5.21",
-    "ws": "^5.2.0",
-    "websocket": "^1.0.26",
-    "mqtt": "^2.15.1",
-    "request": "^2.83.0"
+    "lodash": "latest",
+    "configstore": "latest",
+    "reconnecting-websocket": "latest",
+    "moment-timezone": "latest",
+    "ws": "latest",
+    "websocket": "latest",
+    "mqtt": "latest",
+    "request": "latest"
   },
   "engines": {
     "node": ">=4"
