--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "websocket": "latest",
     "mqtt": "latest",
     "request": "latest",
-    "repeat": "latest"
+    "repeat": "0.0.6"
   },
   "engines": {
     "node": ">=4"
