--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,3 +23,10 @@ build:
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
   except:
     - master
+
+deploy:
+  stage: deploy
+  image: jonaskello/rancher-cli-k8s:v2.0.4
+  script:
+    - rancher login http://10.0.1.60 --token token-v77hv:8mngsc4hk5wdwtckmg75b2929rd8qnjf8qrfvbslsnzs8f2w46r28v
+    - rancher kubectl --namespace=automation patch deployment mqtt-deconz.bridge -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
