--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
     - master
 
 deploy:
-  stage: build
+  stage: deploy
   image: jonaskello/rancher-cli-k8s:v2.0.4
   script:
     - rancher login http://10.0.1.60 --token token-v77hv:8mngsc4hk5wdwtckmg75b2929rd8qnjf8qrfvbslsnzs8f2w46r28v
