--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "moment-timezone": "latest",
         "ws": "latest",
         "mqtt": "latest",
-        "got": "latest",
+        "got": "^11.0.0",
         "interval-promise": "latest"
     },
     "engines": {
